added first directive

--- a/app/server/views/index.hbs
+++ b/app/server/views/index.hbs
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app" lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>Agile board</title>
 </head>
 <body>
-	Hello world from server
-	<div id='unique'></div>
 	<script type="text/javascript" src="/assets/app.bundle.js"></script>
 	<link rel="stylesheet" type="text/css" href="/assets/app.bundle.css">
 </body>
