--- a/app/server/views/index.hbs
+++ b/app/server/views/index.hbs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="app" lang="en">
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>Agile board</title>
 </head>
 <body>
+	<hello-world ></hello-world>
 	<script type="text/javascript" src="/assets/app.bundle.js"></script>
 	<link rel="stylesheet" type="text/css" href="/assets/app.bundle.css">
 </body>
