fix some mistakes

--- a/app/client/main/styles.less
+++ b/app/client/main/styles.less
@@ -1,4 +1,4 @@
-@import "~bootstrap/less/bootstrap";
+@import "~bootstrap/less/bootstrap.less";
 body {
 	background-color: light-blue;
 	color: blue;
