--- a/app/server/views/index.hbs
+++ b/app/server/views/index.hbs
@@ -7,5 +7,6 @@
 <body>
 	<script type="text/javascript" src="/assets/app.bundle.js"></script>
 	<link rel="stylesheet" type="text/css" href="/assets/app.bundle.css">
+	<hello-world></hello-world>
 </body>
 </html>
