--- a/app/server/views/index.hbs
+++ b/app/server/views/index.hbs
@@ -7,6 +7,7 @@
 <body>
 	<script type="text/javascript" src="/assets/app.bundle.js"></script>
 	<link rel="stylesheet" type="text/css" href="/assets/app.bundle.css">
+	<base href="/">
     <div ui-view></div>
 </body>
 </html>
