--- a/app/server/views/index.hbs
+++ b/app/server/views/index.hbs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	<meta charset="utf-8">
 	<title>Agile board</title>
 </head>
