--- a/app/client/styles/about.less
+++ b/app/client/styles/about.less
@@ -1,3 +1,5 @@
+// layout.less
+
 .wrapper {
     min-width: 400px;
     padding-left: 5px;
@@ -11,6 +13,8 @@
     background-color: lightblue;
     text-align: start;
 }
+
+// board.less
 
 .board {
     display: flex;
@@ -59,6 +63,18 @@
     border-left-style: solid;
     border-left-width: 3px;
     margin: 5px 0;
+}
+
+.board__info__container__points {
+    width:20px;
+    height:20px;
+    display:block;
+    border-radius:10px;
+    font-size:10px; 
+    color:#fff;
+    line-height:20px;
+    text-align:center;
+    background:#000;
 }
 
 
