fix some layout features

--- a/app/client/pages/partial/information.html
+++ b/app/client/pages/partial/information.html
@@ -1,2 +1,35 @@
-<h3><a href="home/board">go to BOARD</a></h3>
-<div><h1>Some information</h1></div>
+<div class="panel panel-success">
+	<div class="panel-heading">
+		<h2 class="panel-title">What is story?</h2>
+	</div>
+	<div class="panel-body">
+		Story is a task, which you should do during the sprint
+	</div>
+</div>
+
+<div class="panel panel-danger">
+	<div class="panel-heading">
+		<h2 class="panel-title">What is priority?</h2>
+	</div>
+	<div class="panel-body">
+		Priority shows the order in which developer should do task
+	</div>
+</div>
+
+<div class="panel panel-info">
+	<div class="panel-heading">
+		<h2 class="panel-title">What is sprint?</h2>
+	</div>
+	<div class="panel-body">
+		Sprint it the period of time for some tasks
+	</div>
+</div>
+
+<div class="panel panel-warning">
+	<div class="panel-heading">
+		<h2 class="panel-title">What is agile?</h2>
+	</div>
+	<div class="panel-body">
+		Agile is one of the most comfortable processes of developing
+	</div>
+</div>
