--- a/app/client/style.less
+++ b/app/client/style.less
@@ -2,6 +2,9 @@
 @import './components/main/styles.less';
 @import './styles/about.less';
 
+body {
+	background-color: #eee;
+}
 .btn {
 	&:active:focus, &:focus {
 		outline: none;
@@ -20,4 +23,13 @@
 		outline: none;
 		background-color: #fff;
 	}
+}
+
+.checkbox {
+	padding-left: 20px;
+}
+
+.col-md {
+	border: 2px groove black; /* Параметры границы */
+    background: lightgrey; /* Цвет фона */
 }
