--- a/app/client/styles/about.less
+++ b/app/client/styles/about.less
@@ -1,14 +1,30 @@
 // layout.less
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+    margin-bottom: 30px;
+}
+
 .wrapper {
     min-width: 400px;
-    padding-left: 5px;
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.footer, .header{
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background-color: #f5f5f5;
+}
+
+.header{
     flex: 0 0 100%; 
     background-color: lightblue;
     text-align: start;
