--- a/app/client/pages/partial/board.html
+++ b/app/client/pages/partial/board.html
@@ -1,46 +1,42 @@
 <div ng-app="sortableApp" ng-controller="sortableController" class="row row-eq-height">
     <div class="col-xs-3">
         <div class="board__navigation">
-            <h3>To Do</h3>
+            <h3 class="board___navigation__name">To Do</h3>
             <hr class='board__line'>
         </div>
         <div ui-sortable="sortableOptionsList[0]" class="board__info" ng-model="tasks[0]">
             <div ng-repeat="app in tasks[0]" class="board__info__container col-xs-12">
-                <p class="board__info__container__priority">Priority: {{$index + 1}}</p>
-                <div class="section">
-                    <p>Name: {{app.title}}</p>
-                    <p>Description: {{app.description}}</p>                   
-                </div>
+                <p>Priority: {{$index + 1}}</p>
+                <p>Name: {{app.title}}</p>
+                <p>Description: {{app.description}}</p>
             </div>
         </div>
     </div>
     <div class="col-xs-3">
         <div class="board__navigation">
-            <h3>In Progress</h3>
+            <h3 class="board___navigation__name">In Progress</h3>
             <hr class='board__line'>
         </div>
         <div ui-sortable="sortableOptionsList[1]" class="board__info" ng-model="tasks[1]">
             <div ng-repeat="app in tasks[1]" class="board__info__container col-xs-12">
-            	{{$index + 1}} {{app.title}} <p>{{app.description}}</p>
-                <p>
-                    this is the second
-                </p>
+            	<p>Priority: {{$index + 1}}</p>
+                <p>Name: {{app.title}}</p>
+                <p>Description: {{app.description}}</p>
             </div>
         </div>
     </div>
     <div class="col-xs-3">
         <div class="board__navigation">
             <div>
-                <h3>Done</h3>
+                <h3 class="board___navigation__name">Done</h3>
                 <hr class='board__line'>
             </div>
         </div>
         <div ui-sortable="sortableOptionsList[2]" class="board__info" ng-model="tasks[2]">
             <div ng-repeat="app in tasks[2]" class="board__info__container col-xs-12">
-            	{{$index + 1}} {{app.title}} <p>{{app.description}}</p>
-                <p>
-                    this is the third
-                </p>
+            	<p>DONE</p>
+                <p>Name: {{app.title}}</p>
+                <p>Description: {{app.description}}</p>
             </div>
         </div>
     </div>
