--- a/app/client/components/task/task.html
+++ b/app/client/components/task/task.html
@@ -1,5 +1,5 @@
-<div>
-	<p>Priority: {{$index + 1}}</p>
-	<p>Name: {{app.title}}</p>
-	<p>Description: {{app.description}}</p>
+<div class="board__column__task">
+	<p>Priority: {{taskCtrl.index + 1}}</p>
+	<p>Name: {{taskCtrl.title}}</p>
+	<p>Description: {{taskCtrl.description}}</p>
 </div>
