--- a/app/client/pages/partial/board.html
+++ b/app/client/pages/partial/board.html
@@ -1,51 +1,6 @@
 <div ng-app="sortableApp" ng-controller="sortableController" class="row row-eq-height">
-    <div class="col-xs-3">
-        <div class="board__navigation">
-            <h3 class="board___navigation__name">To Do</h3>
-            <hr class='board__line'>
-        </div>
-        <div ui-sortable="sortableOptionsList[0]" class="board__info" ng-model="tasks[0]">
-            <div ng-repeat="app in tasks[0]" class="board__info__container col-xs-12">
-                <p>Priority: {{$index + 1}}</p>
-                <p>Name: {{app.title}}</p>
-                <p>Description: {{app.description}}</p>
-            </div>
-        </div>
+    <div class="col-xs-3" ng-repeat="column in columns">
+        <board-column column='column'></board-column>
     </div>
-    <div class="col-xs-3">
-        <div class="board__navigation">
-            <h3 class="board___navigation__name">In Progress</h3>
-            <hr class='board__line'>
-        </div>
-        <div ui-sortable="sortableOptionsList[1]" class="board__info" ng-model="tasks[1]">
-            <div ng-repeat="app in tasks[1]" class="board__info__container col-xs-12">
-            	<p>Priority: {{$index + 1}}</p>
-                <p>Name: {{app.title}}</p>
-                <p>Description: {{app.description}}</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-3">
-        <div class="board__navigation">
-            <div>
-                <h3 class="board___navigation__name">Done</h3>
-                <hr class='board__line'>
-            </div>
-        </div>
-        <div ui-sortable="sortableOptionsList[2]" class="board__info" ng-model="tasks[2]">
-            <div ng-repeat="app in tasks[2]" class="board__info__container col-xs-12">
-            	<p>DONE</p>
-                <p>Name: {{app.title}}</p>
-                <p>Description: {{app.description}}</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-2 col-xs-offset-1 list-group">
-        <a href="#" class="list-group-item">Story 1: Poach DB</a>
-        <a href="#" class="list-group-item">Story 2: Bootstrap 3</a>
-        <a href="#" class="list-group-item">Story 3: Pages</a>
-        <a href="#" class="list-group-item">Story 4: koa server</a>
-        <a href="#" class="list-group-item">Story 5: Directive</a>
-        <a href="#" class="list-group-item">Story 6: Template</a>
-    </div>
+    <tasks-list columns="columns"></tasks-list>
 </div>
