controllers to upprercase

--- a/app/client/components/board-column/board-column.html
+++ b/app/client/components/board-column/board-column.html
@@ -1,10 +1,10 @@
 <div>
 	<div class="board__navigation">
-        <h3 class="board___navigation__name">{{::bcCtrl.title}}</h3>
+        <h3 class="board___navigation__name">{{::BoardColumnCtrl.title}}</h3>
         <hr class='board__line'>
     </div>
-    <div ui-sortable="bcCtrl.options" class="board__info" ng-model="bcCtrl.tasks">
-        <div ng-repeat="task in bcCtrl.tasks" class="board__info__container col-xs-12">
+    <div ui-sortable="BoardColumnCtrl.options" class="board__info" ng-model="BoardColumnCtrl.tasks">
+        <div ng-repeat="task in BoardColumnCtrl.tasks" class="board__info__container col-xs-12">
         	<task task="task" index="$index"></task>
         </div>
     </div>
