--- a/app/client/components/task/task.html
+++ b/app/client/components/task/task.html
@@ -1,5 +1,5 @@
 <div class="board__column__task">
-	<p>Priority: {{taskCtrl.index + 1}}</p>
-	<p>Name: {{taskCtrl.title}}</p>
-	<p>Description: {{taskCtrl.description}}</p>
+	<p>Priority: {{TaskCtrl.index + 1}}</p>
+	<p>Name: {{TaskCtrl.title}}</p>
+	<p>Description: {{TaskCtrl.description}}</p>
 </div>
