--- a/app/client/components/tasks-list/tasks-list.html
+++ b/app/client/components/tasks-list/tasks-list.html
@@ -1,5 +1,5 @@
 <div class="col-xs-2 col-xs-offset-1 list-group">
-    <div ng-repeat="task in tasksListCtrl.tasks">
+    <div ng-repeat="task in TasksListCtrl.tasks">
         <a href="#" class="list-group-item">Story {{$index + 1}}: {{task.title}}</a>            
     </div>
 </div>
