--- a/app/client/pages/partial/board.html
+++ b/app/client/pages/partial/board.html
@@ -1,4 +1,4 @@
-<div ng-app="sortableApp" ng-controller="sortableController" class="row row-eq-height">
+<div ng-app="sortableApp" ng-controller="SortableCtrl" class="row row-eq-height">
     <div class="col-xs-3" ng-repeat="column in columns">
         <board-column column='column'></board-column>
     </div>
