added logic for stories

--- a/app/client/components/board-header/board-header.html
+++ b/app/client/components/board-header/board-header.html
@@ -15,8 +15,9 @@
     
       <ul class = "nav navbar-nav">
          <li><a href = "/home/information">Information</a></li>
-         <li><a href = "/about">About</a></li>
-         <li><a href = "/auth">Log in</a></li>               
+         <li><a href = "/about">About project</a></li>
+         <li><a href = "/auth">Log in</a></li>     
+         <li><a href = "/reg">Registration</a></li>               
       </ul>
    </div>       
 </nav>
