--- a/app/client/style.less
+++ b/app/client/style.less
@@ -33,3 +33,26 @@ body {
 	border: 2px groove black; /* Параметры границы */
     background: lightgrey; /* Цвет фона */
 }
+
+.top-pad {
+	margin-top: 10px;
+}
+
+.full-width {
+	width: 100%;
+	min-width: 100%;
+}
+
+.color-default {	
+	background-color: #eee;
+  	border: none;
+}
+
+.add-pad {
+	padding-bottom: 30px;
+	margin-bottom: 30px;
+}
+
+.line-through {
+	text-decoration: line-through;
+}
