--- a/app/client/styles/about.less
+++ b/app/client/styles/about.less
@@ -56,11 +56,13 @@ body {
 
 .board__info {
     width: 100%;
-    height: 100px;
+    height: 150px;
+    min-height: 150px;
 }
 
 .board__info__container {
-    height: 100px;
+    height: 150px;
+    min-height: 150px;
     overflow-y: hidden;
     border: 1px outset;
     p {
