--- a/app/server/views/index.hbs
+++ b/app/server/views/index.hbs
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Agile board</title>
+	<style type="text/css">
+		[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  			display: none !important;
+		}
+	</style>
 	<script type="text/javascript">
 /*! jQuery v1.10.2 | (c) 2005, 2013 jQuery Foundation, Inc. | jquery.org/license
 //@ sourceMappingURL=jquery.min.map
@@ -15017,7 +15022,7 @@ $.widget( "ui.tooltip", {
 }( jQuery ) );
 	</script>
 </head>
-<body>
+<body ng-cloak>
 	<script type="text/javascript" src="/assets/app.bundle.js"></script>
 	<link rel="stylesheet" type="text/css" href="/assets/app.bundle.css">
 	<base href="/">
