--- a/app/client/components/board-header/board-header.html
+++ b/app/client/components/board-header/board-header.html
@@ -16,6 +16,7 @@
       <ul class = "nav navbar-nav">
          <li><a href = "/home/information">Information</a></li>
          <li><a href = "/about">About project</a></li>
+         <li><a href = "/backlog">Backlog</a></li>
          <li><a href = "/auth">Log in</a></li>     
          <li><a href = "/reg">Registration</a></li>               
       </ul>
