--- a/app/client/pages/partial/board.html
+++ b/app/client/pages/partial/board.html
@@ -14,6 +14,11 @@
 			<a style="color:white" ng-href="/home/closed">
 	    		Closed tasks
 	    	</a>
+	    </button>	    
+	    <button type="button" class="btn btn-warning full-width">
+			<a style="color:white" ng-href="/backlog">
+	    		Backlog
+	    	</a>
 	    </button>
 	</div>
 </div>
