fix name of backlog

--- a/app/client/components/backlog/backlog.html
+++ b/app/client/components/backlog/backlog.html
@@ -1,5 +1,5 @@
 <div class="panel panel-info">
- 	<div class="panel-heading">Closed stories</div>
+ 	<div class="panel-heading">Backlog</div>
  	<div class="panel-body">
 		<ul ng-show="BacklogCtrl.backlog.length > 0" class="list-group" ng-repeat="task in BacklogCtrl.backlog">
 			<li class="list-group-item  list-group-item-info">
